Login with Google

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,11 +2,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=CSSAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "Authentication": {
+    "Google": {
+      "ClientId": "YOUR_CLIENT_ID_HERE",
+      "ClientSecret": "YOUR_SECRET_HERE"
+    }
+  }
 }
