Added Login with Facebook

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,10 @@
     "Google": {
       "ClientId": "YOUR_CLIENT_ID_HERE",
       "ClientSecret": "YOUR_SECRET_HERE"
+    },
+    "Facebook": {
+      "AppId": "YOUR_APP_ID",
+      "AppSecret": "YOUR_APP_SECRET"
     }
   }
 }
