Forgate password with gmail

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,15 @@
 
   "AllowedHosts": "*",
 
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "CSS Support",
+    "SenderEmail": "consciousstudentsociety@gmail.com",
+    "Username": "consciousstudentsociety@gmail.com",
+    "Password": ""
+  },
+
   "Authentication": {
     "Google": {
       "ClientId": "YOUR_CLIENT_ID_HERE",
