--- a/CSS.csproj
+++ b/CSS.csproj
@@ -23,4 +23,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\profiles\" />
+  </ItemGroup>
+
 </Project>
