Integrate AamarPay payment system and add migrations

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,14 @@
 {
+  "AamarPay": {
+    "StoreId": "",
+    "SignatureKey": "",
+    "UseSandbox": true,
+    "SandboxInitUrl": "https://sandbox.aamarpay.com/jsonpost.php",
+    "SandboxTrxCheckUrl": "https://sandbox.aamarpay.com/api/v1/trxcheck/request.php",
+    "LiveInitUrl": "https://secure.aamarpay.com/jsonpost.php",
+    "LiveTrxCheckUrl": "https://secure.aamarpay.com/api/v1/trxcheck/request.php"
+  },
+
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=CSSAuthDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
