Notification added in email and pc popup

--- a/appsettings.json
+++ b/appsettings.json
@@ -31,6 +31,13 @@
     "Password": ""
   },
 
+  "Vapid": {
+    "Subject": "mailto:consciousstudentsociety@gmail.com",
+    "PublicKey": "BOISTyIvgMsU2t69xAWjrU0s4_sywibXjzx_PuqTphpGfkBdPsHaa8A0FZ1xxWyaNnb-Nv2XZD4llgrbe2u0nFI",
+    "PrivateKey": "kxlbcUqmCrKKMC2rmBENQ4DfIElPpOROBfi48tAvnbs"
+  },
+
+
   "Authentication": {
     "Google": {
       "ClientId": "YOUR_CLIENT_ID_HERE",
